Fixed jumping issue when entering data into the form; added Cancel button to Make Booking page

--- a/FrontEnd/src/Components/CSS/style.css
+++ b/FrontEnd/src/Components/CSS/style.css
@@ -1,3 +1,8 @@
+html {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 body{
     margin:0;
     padding:0;
@@ -32,6 +37,15 @@ body{
     text-align: center;
     font-size: 20px;
   }
+
+  .container-fluid {
+    margin: auto;
+  }
+
+  form, input {
+    overflow: hidden !important;
+  }
+
   .loginbox p{
     margin: 0;
     padding: 0;
@@ -62,6 +76,7 @@ body{
     border-radius: 20px;
   
   }
+
   .loginbox input[type="submit"]hover{
     cursor: pointer;
     background: #ffc187;
